[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/principal.png" type="Texture" id=1]
[ext_resource path="res://BGM/6. ES_Forest Exploration - Sight of Wonders.mp3" type="AudioStream" id=2]
[ext_resource path="res://images/Mi Bosque.png" type="Texture" id=3]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=4]
[ext_resource path="res://images/Nueva.png" type="Texture" id=5]
[ext_resource path="res://images/Cargar.png" type="Texture" id=6]
[ext_resource path="res://scenes/PantallaInicio.gd" type="Script" id=7]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=8]
[ext_resource path="res://assets/PopUp.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Righteous-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 8 )

[node name="Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = -23.0
margin_top = -28.0
margin_right = 1055.0
margin_bottom = 626.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = -4.0
margin_right = 1023.0
margin_bottom = 338.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Mi Bosque" type="TextureRect" parent="HBoxContainer2"]
margin_left = 251.0
margin_right = 769.0
margin_bottom = 342.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 946.0
margin_top = 13.0
margin_right = 1014.0
margin_bottom = 81.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 319.0
margin_right = 3410.0
margin_bottom = 1129.0
rect_scale = Vector2( 0.3, 0.3 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Nuevo" type="TextureButton" parent="HBoxContainer"]
margin_left = 444.0
margin_top = 91.0
margin_right = 1703.0
margin_bottom = 719.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
stretch_mode = 4

[node name="Cargar" type="TextureButton" parent="HBoxContainer"]
margin_left = 1707.0
margin_top = 91.0
margin_right = 2966.0
margin_bottom = 718.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
stretch_mode = 5

[node name="Popup" type="Popup" parent="."]
margin_left = 344.0
margin_top = 198.0
margin_right = 671.0
margin_bottom = 421.0
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
texture = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -12.0
margin_right = 32.0
margin_bottom = 2.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
margin_top = 71.0
margin_right = 393.0
margin_bottom = 109.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Â¿Desea salir del juego?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer"]
margin_top = 129.0
margin_right = 393.0
margin_bottom = 166.0
alignment = 1

[node name="Button" type="Button" parent="Popup/VBoxContainer/HBoxContainer" groups=["botones"]]
margin_left = 85.0
margin_right = 223.0
margin_bottom = 37.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.188235, 1, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 1
text = "CANCELAR"
flat = true

[node name="Button2" type="Button" parent="Popup/VBoxContainer/HBoxContainer" groups=["botones"]]
margin_left = 227.0
margin_right = 308.0
margin_bottom = 37.0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 1
text = "SALIR"
flat = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -17.0

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Nuevo" to="." method="_on_Nuevo_pressed"]
[connection signal="pressed" from="HBoxContainer/Cargar" to="." method="_on_Cargar_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
